<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="@drawable/google_card_media_background" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/fragment_tab_media_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cd_main_image"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#80b62025" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.example.android.cfgprepapp.font.RobotoTextView
                    android:id="@+id/fragment_tab_media_artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="16dp"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingTop="0dp"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:typeface="robotoLight" />

                <com.example.android.cfgprepapp.font.RobotoTextView
                    android:id="@+id/fragment_tab_media_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_tab_media_artist_name"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:gravity="left"
                    android:maxLines="4"
                    android:text="Mumbai"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:typeface="robotoRegular" />

                <com.example.android.cfgprepapp.font.RobotoTextView
                    android:id="@+id/fragment_tab_media_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_tab_media_place"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:gravity="left"
                    android:maxLines="4"
                    android:text="Male"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:typeface="robotoRegular" />

                <com.example.android.cfgprepapp.font.RobotoTextView
                    android:id="@+id/fragment_tab_media_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_tab_media_gender"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:gravity="left"
                    android:maxLines="4"
                    android:text="20"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:typeface="robotoRegular" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.example.android.cfgprepapp.font.RobotoTextView
                android:id="@+id/fragment_tab_media_about_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="0dp"
                android:gravity="right|top"
                android:paddingBottom="5dp"
                android:paddingTop="1dp"
                android:text="About "
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:typeface="robotoLight" />

            <com.example.android.cfgprepapp.font.RobotoTextView
                android:id="@+id/fragment_tab_media_about_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_tab_media_about_heading"
                android:layout_alignLeft="@id/fragment_tab_media_about_heading"
                android:layout_marginRight="4dp"
                android:maxLines="4"
                android:text="@string/lorem_ipsum_long"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:typeface="robotoRegular" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="8dp"
                android:gravity="right|bottom"
                android:visibility="invisible">

                <com.example.android.cfgprepapp.font.MaterialDesignIconsTextView
                    android:id="@+id/fragment_tab_media_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="8dp"
                    android:text="@string/material_icon_like"
                    android:textColor="@android:color/white"
                    android:textSize="24dp" />

                <com.example.android.cfgprepapp.font.MaterialDesignIconsTextView
                    android:id="@+id/fragment_tab_media_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    android:text="@string/material_icon_favorite"
                    android:textColor="@android:color/white"
                    android:textSize="24dp" />

                <com.example.android.cfgprepapp.font.MaterialDesignIconsTextView
                    android:id="@+id/fragment_tab_media_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="8dp"
                    android:text="@string/material_icon_share"
                    android:textColor="@android:color/white"
                    android:textSize="24dp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>